// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Search /> should render 1`] = `
<div>
  <div
    class="mfui-search mfui-search_type_textfield"
  >
    <div
      class="mfui-search__control"
    >
      <input
        autocomplete="off"
        class="mfui-search__field"
        id="mfuiSearchId"
        type="text"
        value=""
      />
      <div
        class="mfui-search__icons"
      >
        <button
          class="mfui-search__submit-button"
          type="button"
        >
          <test-file-stub
            classname="mfui-search__submit-icon"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Search /> should render with items 1`] = `
<div>
  <div
    class="mfui-search mfui-search_type_textfield"
    data-testid="root"
  >
    <div
      class="mfui-search__control"
      data-testid="control"
    >
      <input
        autocomplete="off"
        class="mfui-search__field"
        data-testid="searchField"
        id="mfuiSearchId"
        type="text"
        value=""
      />
      <div
        class="mfui-search__icons"
      >
        <button
          class="mfui-search__submit-button"
          data-testid="submit"
          type="button"
        >
          <test-file-stub
            classname="mfui-search__submit-icon"
          />
        </button>
      </div>
      <div
        class="mfui-search__list"
      >
        <div
          class="mfui-search__list-inner"
        >
          <div
            class="mfui-search__list-item mfui-search__list-item_paddings_large"
            data-testid="item[1]"
          >
            <div
              class="mfui-search__item-title"
              data-testid="itemTitle[1]"
            >
              t
              <span
                class="mfui-search__highlighted-fragment"
              />
              i
              <span
                class="mfui-search__highlighted-fragment"
              />
              t
              <span
                class="mfui-search__highlighted-fragment"
              />
              l
              <span
                class="mfui-search__highlighted-fragment"
              />
              e
            </div>
          </div>
          <div
            class="mfui-search__list-item mfui-search__list-item_paddings_small"
            data-testid="item[2]"
          >
            <div
              class="mfui-search__item-title"
              data-testid="itemTitle[2]"
            >
              <div>
                <div>
                  <b>
                    ИП Баранник Александр Николаевич
                  </b>
                </div>
                <div>
                  <b>
                    ИНН: 503209463031
                  </b>
                </div>
                <div>
                  Московская обл, Одинцовский р-н, г Одинцово
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Search /> should render with label 1`] = `
<label
  class="mfui-search__label"
  for="mfuiSearchId"
>
  label
</label>
`;

exports[`<Search /> should render with noticeText and verification="valid" 1`] = `
<div
  class="mfui-search__notice mfui-search__notice_success"
  data-testid="notice"
>
  noticeText
</div>
`;

exports[`<Search /> should render with required 1`] = `
<label
  class="mfui-search__label"
  for="mfuiSearchId"
>
  label
  <span
    class="mfui-search__require-mark"
  >
    *
  </span>
</label>
`;
